K3s/overlays/develop/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volunti
  annotations:
    traefik.io/router.middlewares: doe25-group-13-burgundy-dev-secure-headers@kubernetescrd
spec:
  rules:
    - host: dev-volunti.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volunti-frontend
                port:
                  number: 80
    - host: dev-volunti-api.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volunti-backend
                port:
                  number: 80
  tls:
    - hosts:
        - dev-volunti.cc.k3s.chas-lab.dev
        - dev-volunti-api.cc.k3s.chas-lab.dev

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volunti-adminer
  annotations:
    traefik.io/router.middlewares: doe25-group-13-burgundy-dev-secure-headers@kubernetescrd,doe25-group-13-burgundy-dev-volunti-basic-auth@kubernetescrd
spec:
  rules:
    - host: dev-adminer-volunti.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
  tls:
    - hosts:
        - dev-adminer-volunti.cc.k3s.chas-lab.dev
